# maritime-ais-stream-analytics

./: .gitignore  blueprint.md  docker-compose.yaml  main.py  mermaid.md  monitor_tables.py  problems.md  pyproject.toml
.opencode/: opencode.json
ingestion/config/: aisstream_config.py
ingestion/consumers/: README.md  aisstream_websocket_consumer.py  kafka_consumer.py
ingestion/producers/: README.md  aisstream_producer.py
monitoring/alerts/: README.md
orchestration/: README.md
processing/spark_jobs/: README.md
processing/utils/: ais_parser.py
scripts/: reset_local_db.py
storage/utils/: sink.py
wip/: mermaid.md
