[project]
name = "maritime-ais-stream-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets",
    "python-dotenv",
    "pandas>=3.0.2",
    "google>=3.0.0",
    "duckdb>=1.5.1",
    "google-cloud-bigquery>=3.41.0",
]
